--- a/pages/concepts/fees.mdx
+++ b/pages/concepts/fees.mdx
@@ -1,5 +1,17 @@
 ## Fees
 
-Fees are set to 5% for a 1v1 wager. From the 5% fee, 100% goes to the ChessFish token holders. The accumulated fees are split proportionally among the ChessFish token holders
+> Fees on ChessFish are designed to ensure long term support of the platform and to add value to the native ChessFish token CFSH. 
 
-Fees for tournaments are 7% of the entire pool. 
+Currently, fees are set to 5% for 1v1 wagers and 7% for tournaments.  All accumulated fees are distrubuted proportionally to all CFSH token holders.
+
+The ChessFish token, CFSH, is a dividend paying ERC-20 token. Meaning that in addition to the intrinsic value of the CFSH token, dividends are payed.
+
+The dividends can be in the form of any other ERC20 token that ChessFish users decide to use when playing in 1v1 matches or tournaments.
+
+Players can still play on ChessFish without depositing an ERC-20 token. In this case, the fees are 0%. 
+
+#### Example 
+
+> If you own 10% of the total supply of CFSH, and the total monthly volume of tournaments games played on ChessFish that use USDC as the wager token is 10,000 USDC, then you will recieve 70 USDC that month.
+
+> 10,000 USDC * 7% fee * 10% percent ownership = 70 USDC
