--- a/pages/concepts/glossary.mdx
+++ b/pages/concepts/glossary.mdx
@@ -1,9 +1,41 @@
 ## Glossary
 
-ERC20 - An ERC20 token refers to a type of digital token that follows the Ethereum Request for Comment 20 (ERC20) standard, which sets out a common set of rules and protocols for creating and operating tokens on the Ethereum blockchain. ERC20 tokens have become the most widely adopted and recognized token standard for issuing and managing tokens on the Ethereum platform.
+### **ERC-20**: 
 
-Dividend Paying Token - A dividend-paying token, also known as a dividend token, is a type of digital token or cryptocurrency that provides periodic distributions of profits or earnings to its token holders. Unlike most tokens or cryptocurrencies, which primarily serve as a medium of exchange or store of value, dividend-paying tokens offer a unique feature of generating passive income for their holders.
+ERC-20 tokens are digital tokens adhering to the Ethereum Request for Comment 20 (ERC20) standard. This standard establishes guidelines for creating and managing tokens on the Ethereum blockchain. ERC20 tokens are recognized as the predominant token standard on Ethereum.
 
+### **Dividend Paying Token**: 
 
-Wager - A wager refers to a formal agreement or contract where two or more parties make a prediction or bet on the outcome of an uncertain event, usually involving the risk of losing something of value (such as money or possessions) or gaining something of value based on the agreed-upon terms. Once the event or outcome occurs, the wager is settled based on the predetermined conditions. The party or parties who correctly predicted the outcome will receive the stakes from the losing party or parties. In some cases, wagers may involve a third party, such as a bookmaker, or in the case of Chess.fish, a smart contract, who facilitates the agreement and ensures fair play.
+These are digital tokens or cryptocurrencies that provide holders with periodic profit distributions. Unlike typical tokens or cryptocurrencies, dividend-paying tokens offer the advantage of passive income generation for their holders.
 
+### **Wager**: 
+
+A wager is a formal agreement where parties bet on an uncertain event's outcome, risking losing or gaining something of value. The wager is settled once the event occurs, with the correct prediction receiving the stakes from the losing party. In some instances, a third party like a bookmaker or a smart contract facilitates and ensures fair play.
+
+### **Ethereum Virtual Machine**: 
+
+The Ethereum Virtual Machine (EVM) is a computational engine that functions as the decentralized runtime environment for Ethereum. It enables the execution of smart contracts on the Ethereum blockchain, providing a layer of abstraction between the executing code and the executing machine.
+
+### **Smart Contract**: 
+A smart contract is a self-executing contract with the terms of the agreement directly written into lines of code. They run on blockchain networks and automatically execute transactions when predefined conditions are met, without the need for intermediaries.
+
+### **Chess Verification Engine**: 
+A Chess Verification Engine is a specialized tool or system designed to verify the legality and accuracy of moves in a game of chess. It ensures that the game adheres to the established rules and can be used in online chess platforms to maintain fair play.
+
+### **Round Robin Tournament**:
+A Round Robin Tournament is a competition format in which each participant plays against every other participant an equal number of times. It's commonly used in sports and games to ensure a fair and comprehensive assessment of each player's abilities.
+
+### **ECDSA Signatures**: 
+ECDSA (Elliptic Curve Digital Signature Algorithm) signatures are a type of digital signature mechanism used for authentication and ensuring the integrity of digital communications. It is widely used in blockchain technologies for securing transactions.
+
+### **Metamask Wallet**: 
+MetaMask is a software cryptocurrency wallet used to interact with the Ethereum blockchain. It allows users to access their Ethereum wallet through a browser extension or mobile app, enabling them to interact with decentralized applications.
+
+### **ERC-721**: 
+ERC-721 is a standard for representing non-fungible tokens (NFTs) on the Ethereum blockchain. Unlike ERC-20 tokens, ERC-721 tokens are unique and can represent ownership of specific assets or items.
+
+### **Trustless**: 
+In blockchain technology, trustless refers to a system where trust between parties is not required. The security and reliability of these systems are ensured through cryptographic techniques and decentralized consensus mechanisms.
+
+### **Decentralization**: 
+Decentralization in the context of blockchain refers to the distribution of power and control away from a central authority. It involves the dispersal of decision-making and governance across a distributed network, enhancing security and reducing single points of failure.
