--- a/pages/concepts/verifier.mdx
+++ b/pages/concepts/verifier.mdx
@@ -10,7 +10,6 @@ import ChessBoard from './board';
 
 _______
 
-
 The verifier contract is the main contract behind verifing and validating all possible legal chess moves. The verifier contract also determines the outcome of the game, whether it is a stalemate, or checkmate.
 
 The verifier contract has been tested on hundreds of thousands of games from lichess.org. For each game, the verifier contract has returned the same outcome as have other off-chain chess move verifiers. 
@@ -19,7 +18,7 @@ Currently the verifier, by default auto-queens when a pawn reaches the other sid
 
 
 ### MoveVerifier board visualizer function
-The MoveVerifier contract stores the chessboard state as a uint256 value. Go to [polygonscan](https://mumbai.polygonscan.com/address/0x56369f7ab5163e4b75683b8eca9bd048ccae97c1#readContract#F15) and input the uin256 gameState you want to get the state for. Copy the resulting string, and paste it into the input box below.
+The MoveVerifier contract stores the chessboard state as a uint256 value. 
 
 Intial gameState uint256: 0xcbaedabc99999999000000000000000000000000000000001111111143265234
 
