--- a/pages/guides/create.mdx
+++ b/pages/guides/create.mdx
@@ -1,4 +1,4 @@
-## Create A Chess Wager
+## Create 1v1 Chess Wager
 
 To create a 1v1 chess match on Chess.fish, navigate to the "Create a Challenge" page on the chess.fish app.
 
