--- a/pages/guides/create.mdx
+++ b/pages/guides/create.mdx
@@ -1,10 +1,23 @@
 ## Create 1v1 Chess Wager
 
-To create a 1v1 chess match on Chess.fish, navigate to the "Create a Challenge" page on the chess.fish app.
+> Follow the steps below to create a 1v1 match on ChessFish:
 
-1) Select the address of your opponent
+1) navigate to the "Create a Challenge" page on the chess.fish app.
+
+
 2) Select the address of the token you will be wagering
-3) Select the amount of the token you will be wagering
-4) Set the time limit for each game in the chess challenge
-5) Approve the Chess.fish contract to use the tokens you specified
-6) Submit the transaction to create the wager by clicking "create wager"
+
+
+3) Select the address of your opponent
+
+
+4) Select the amount of the token you will be wagering
+
+
+5) Set the time limit for each game in the chess challenge
+
+
+6) Approve the Chess.fish contract to use the tokens you specified
+
+
+7) Submit the transaction to create the wager by clicking "create wager"
