--- a/pages/guides/accept.mdx
+++ b/pages/guides/accept.mdx
@@ -1,7 +1,15 @@
-## Accept a Wager
+## Accepting a Wager
 
-Once either you have created a wager, your opponent can decide to accept or reject the conditions of the wager.
+#### 1. Navigate to the "Matches" Page
+To accept a wager, navigate to the "matches" page on the ChessFish app. If your opponent has created a wager, it will appear as a pending wager.
 
-If your opponent denies your wager conditions, you can cancel your wager, and withdraw your tokens. 
+#### 2. Accept the Wager
+To accept the wager, click the "Accept Wager Conditions" button shown in the match details dropdown.
 
-To accept a wager, nagivate to the "matches" page. If your opponent has created a wager, you will see it as a pending wager. To accept, click the "accept wager" button.
+<br/>
+
+<img src="/guides/accept/accept.gif" width="400"/>
+
+<br/>
+
+> **Note:** When you create a wager, your opponent has the option to either accept or reject the conditions of the wager. If your opponent denies your wager conditions, you have the option to cancel your wager and withdraw your deposited tokens.
