--- a/pages/guides/create.mdx
+++ b/pages/guides/create.mdx
@@ -2,22 +2,20 @@
 
 > Follow the steps below to create a 1v1 match on ChessFish:
 
-1) navigate to the "Create a Challenge" page on the chess.fish app.
+#### 1. Navigate to the "Create a Challenge" page on the ChessFish app
+<img src="/guides/create1v1/create1v1.png" width="300"/>
 
+#### 2. Select the address of the token you will be wagering
+If you do not want to wager a token, simply select a token and set the amount to zero.
+<img src="/guides/create1v1/selectTokenCropped.gif" width="400"/>
 
-2) Select the address of the token you will be wagering
+#### 3. Select the address of your opponent or select anonymous pairing
+Choosing anonymous pairing allows you to create a wager that any willing participant can accept and play against you.
+<img src="/guides/create1v1/selectPlayerCropped.gif" width="400"/>
 
+#### 4. Select the amount of the token you will be wagering and the time limit for the entire wager
+<img src="/guides/create1v1/selectParamsCropped.gif" width="400"/>
 
-3) Select the address of your opponent
+#### 5. If you are wagering tokens, click the "Approve Tokens" button
 
-
-4) Select the amount of the token you will be wagering
-
-
-5) Set the time limit for each game in the chess challenge
-
-
-6) Approve the Chess.fish contract to use the tokens you specified
-
-
-7) Submit the transaction to create the wager by clicking "create wager"
+#### 6. Click "create wager" to create the wager
