--- a/pages/guides/withdraw.mdx
+++ b/pages/guides/withdraw.mdx
@@ -1,3 +1,8 @@
-## Withdraw Wager
+## Payout Wager
+
+<video width="520" height="340" controls>
+  <source src="/guides/payout/Payout.mp4" type="video/mp4" />
+  Your browser does not support the video tag.
+</video>
 
 If you are the winner of the chess match, (this is determined by who has the most overall wins out of the games initially set), you can withdraw your earnings by heading to the "matches" page and clicking the "payout wager" button.
