--- a/pages/guides/create.mdx
+++ b/pages/guides/create.mdx
@@ -3,14 +3,17 @@
 > Follow the steps below to create a 1v1 match on ChessFish:
 
 #### 1. Navigate to the "Create a Challenge" page on the ChessFish app
+<br/>
 <img src="/guides/create1v1/create1v1.png" width="300"/>
 
 #### 2. Select the address of the token you will be wagering
-If you do not want to wager a token, simply select a token and set the amount to zero.
+If you do not want to wager a token, simply select a token and set the amount to zero. If you do not see the token you wish to wager, paste the address directly.
+ <br/>
 <img src="/guides/create1v1/selectTokenCropped.gif" width="400"/>
 
 #### 3. Select the address of your opponent or select anonymous pairing
 Choosing anonymous pairing allows you to create a wager that any willing participant can accept and play against you.
+<br/>
 <img src="/guides/create1v1/selectPlayerCropped.gif" width="400"/>
 
 #### 4. Select the amount of the token you will be wagering and the time limit for the entire wager
