--- a/pages/guides/withdraw.mdx
+++ b/pages/guides/withdraw.mdx
@@ -6,3 +6,7 @@
 </video>
 
 If you are the winner of the chess match, (this is determined by who has the most overall wins out of the games initially set), you can withdraw your earnings by heading to the "matches" page and clicking the "payout wager" button.
+
+The other player's deposit will be sent to your address.
+
+A ChessFish Winner NFT will also be sent to your address, proving you won the Chess wager.
