--- a/pages/guides/gameplay.mdx
+++ b/pages/guides/gameplay.mdx
@@ -1,4 +1,5 @@
-## Playing Moves
+## Starting a game and making moves on the chess board
+<br/>
 
 <video width="520" height="340" controls>
   <source src="/guides/write/firstgame.mp4" type="video/mp4" />
