--- a/pages/guides/tournaments.mdx
+++ b/pages/guides/tournaments.mdx
@@ -61,5 +61,22 @@ The start tournament button will appear if 1 day has passed after creating the t
 
 #### 5. To view your tournament games go to the "Your Matches" page.
 Here you can filter 1v1 games from tournament games. Once the tournament has started, the clock starts ticking for all 1v1 matches in the tournament.
+
 <br/>
 <img src="/guides/tournament/tournamentGames.png" width="500"/>
+
+## Ending a tournament and handling winning payouts
+
+#### 1. To end a tournament and handle payouts head to the "Tournament Viewer" page
+<br/>
+<img src="/guides/tournament/tournamentViewer.png" width="300"/>
+
+
+#### 2. If a tournament has ended, click the "End Tournament and Handle Payout" button
+> If all of the games in the tournament have been played, the button "End Tournament and Handle Payout" will appear. 
+> If certain players decide to not play all of their games, other players will be able to end the tournament once the tournament time limit has ended. 
+
+Read more about tournament payout ratios here: [Tournament Payout Profiles](/concepts/tournament)
+<br/>
+<img src="/guides/tournament/endTournament.png" width="500"/>
+
