--- a/pages/tokenomics/tokenomics.mdx
+++ b/pages/tokenomics/tokenomics.mdx
@@ -1,3 +1,5 @@
+import DividendCalculator from './calculator';
+
 ## ChessFish Tokenomics
 
 The ChessFish token is unique in the web3 gaming world because by holding the ChessFish token you own part of the revenue stream of the ChessFish platform.
@@ -18,5 +20,12 @@ ______
 **Revenue Distribution:**
 - 100% of all accumulated fees go to the ChessFish token holders. 
 - If you own 10% of the total supply of the ChessFish tokens, you will receive 10% of all the revenue earned by the ChessFish platform.
+
+
+### CFSH Dividend Calculator
+<br/>
+<DividendCalculator/>
+
+<br/>
 
 > CFSH Token on etherscan: [https://etherscan.io/address/0xe2976a66e8cef3932cdaeb935e114dcd5ce20f20](https://etherscan.io/address/0xe2976a66e8cef3932cdaeb935e114dcd5ce20f20)
