--- a/pages/contracts/contracts.mdx
+++ b/pages/contracts/contracts.mdx
@@ -1,31 +1,28 @@
 ## Smart Contracts
 
-Currently the ChessFish contracts are only deployed to Polygon Mumbai and Goerli Testnets.
+Currently, the ChessFish contracts are only deployed to Polygon Mumbai and Goerli Testnets.
 
-## Testnet Contract Addresse and Addresses
-## Networks and Addresses
+## Testnet Contract Addresses
 
 ### Arbitrum Sepolia
 
 | Contract name    | Address                                                    |
 |-------------------|----------------------------------------------------------------|
-| Deployer          | 0xB11B4FF9C2e66e78A0c53b6aE5EAAA87548f2dE7                   |
-| Chess Fish Token  | 0x8F06c56A3F11b022ef9461C0b62F81a5Aa93283f                   |
-| Dividend Splitter | 0xA804A4411aB00F7DF2029a36EC8fDA72F89B3b9A                   |
-| Chess NFT         | 0xE591E05D6caf4c52c94d084e6FD15c85F3B38C2d                   |
-| Move Verification | 0xe3adcBF9BbD6fCC4249d786AF8f11a1bBB8ae526                   |
-| Chess Wager       | 0x84162e735D14810F7307D6E637aBdcD4CC0f1A1e                   |
-| Crowd Sale        | 0xbD3F3011b22dadB764BeF9E95279e0C8b5B58357                   |
-| Tournament        | 0x529481596d39aF79B99c17B3Df5cbb893f70A565                   |
-| Treasury Vesting  | 0xeD01FEEdE03a11f09E205DD2df3e6F96Ac5F88De                   |
+| Deployer          | 0x2Ff6C88b03Ed6926Cc83C05E2c7689f1e1299B13                   |
+| Chess Fish Token  | 0x618157159056222d501209951a3AB60a6F8Ee1de                   |
+| Dividend Splitter | 0x6661986fDF2F0dFca7840585Df30565bc2077DA4                   |
+| Chess NFT         | 0xD0d4bAc3dFef74830625990a0cf17aB04B99f034                   |
+| Move Verification | 0x8a64782C18a8FA0C31Ee6571ED61F21ecB70AC4f                   |
+| Chess Wager       | 0xeAe6Ab0D60156Ef91733f5Dc29F828Ad6eF50b9F                   |
+| Crowd Sale        | 0xa062E0f2d353114063cc6d5B58a9B35D0b298d2F                   |
+| Tournament        | 0x95D0c3097D5E71cc3c622eE0da0b3Ddb7Da18665                   |
+| Treasury Vesting  | 0xa7C7837C7872ABa9B79CA352C1300C211955B90c                   |
 
 
 ### Sepolia 
 
 | Contract name    | Address                                                    |
 |------------------|----------------------------------------------------------------|
-| Chess Fish Token | 0x8F06c56A3F11b022ef9461C0b62F81a5Aa93283f                   |
+| Chess Fish Token | 0x36C4580CBBc723BA4df397bcC86d738f52b50E13                   |
 | Crowd Sale       | 0xbD3F3011b22dadB764BeF9E95279e0C8b5B58357                   |
 | Treasury Vesting | 0xeD01FEEdE03a11f09E205DD2df3e6F96Ac5F88De                   |
-
-
