--- a/pages/guides/gameplay.mdx
+++ b/pages/guides/gameplay.mdx
@@ -2,7 +2,7 @@
 <br/>
 
 <video width="520" height="340" controls>
-  <source src="/guides/write/firstgame.mp4" type="video/mp4" />
+  <source src="/guides/write/firstGame.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video>
 
