--- a/pages/guides/tournaments.mdx
+++ b/pages/guides/tournaments.mdx
@@ -32,6 +32,12 @@ This is the deposit amount required to enter the tournament.
  <br/>
 <img src="/guides/tournament/params.gif" width="400"/>
 
+#### To create a tournament that only specific player addresses can join select turn on "Specify Players"
+> Switch on "Creator Joining" to join the created tournament.
+> Note: Authenticated Tournaments must have wager amounts greater than 0
+<br/>
+<img src="/guides/tournament/authenticatedTournament.gif" width="400"/>
+
 
 ## Joining a Tournament
 
