--- a/pages/contracts/contracts.mdx
+++ b/pages/contracts/contracts.mdx
@@ -1,28 +1,41 @@
 ## Smart Contracts
 
-Currently, the ChessFish contracts are only deployed to Polygon Mumbai and Goerli Testnets.
+Currently, the ChessFish contracts are deployed on Ethereum Mainnet, Arbitrum, and Arbitrum Sepolia.
 
-## Testnet Contract Addresses
+### Ethereum Mainnet Contract Addresses
 
-### Arbitrum Sepolia
+| Contract name       | Address                                      |
+|---------------------|----------------------------------------------|
+| Deployer            | `0xC61bDCC3A088323D39Dbe364C10281982836506c` |
+| Chess Fish Token    | `0xE2976A66E8CEF3932CDAEb935E114dCd5ce20F20` |
+| Treasury Vesting    | `0x150bFDb78820542d370ceD245A4e7a5F5C131281` |
 
-| Contract name    | Address                                                    |
-|-------------------|----------------------------------------------------------------|
-| Deployer          | 0x2Ff6C88b03Ed6926Cc83C05E2c7689f1e1299B13                   |
-| Chess Fish Token  | 0x618157159056222d501209951a3AB60a6F8Ee1de                   |
-| Dividend Splitter | 0x6661986fDF2F0dFca7840585Df30565bc2077DA4                   |
-| Chess NFT         | 0xD0d4bAc3dFef74830625990a0cf17aB04B99f034                   |
-| Move Verification | 0x8a64782C18a8FA0C31Ee6571ED61F21ecB70AC4f                   |
-| Chess Wager       | 0xeAe6Ab0D60156Ef91733f5Dc29F828Ad6eF50b9F                   |
-| Crowd Sale        | 0xa062E0f2d353114063cc6d5B58a9B35D0b298d2F                   |
-| Tournament        | 0x95D0c3097D5E71cc3c622eE0da0b3Ddb7Da18665                   |
-| Treasury Vesting  | 0xa7C7837C7872ABa9B79CA352C1300C211955B90c                   |
+### Arbitrum Contract Addresses
 
+| Contract name       | Address                                      |
+|---------------------|----------------------------------------------|
+| Deployer            | `0xC61bDCC3A088323D39Dbe364C10281982836506c` |
+| Chess Fish Token    | `0xc218A06a17FeB66B1a730889fB9624326Fabff4b` |
+| Dividend Splitter   | `0x973C170C3BC2E7E1B3867B3B29D57865efDDa59a` |
+| Chess NFT           | `0xbD1DFf018449AD4CBa7d3c0E982Cb9677b758f57` |
+| Move Verification   | `0x9ea6881ac1b5C4949E42Ae83D799622e2371A6c2` |
+| Gasless Game        | `0xeAbb5E5aF52Bf200c11F39e441B79746218Fe9d5` |
+| Chess Wager         | `0x3a228f23Df0e3c7E28FC6A39b463Cd7EED0CB25c` |
+| Crowd Sale          | `0xE2976A66E8CEF3932CDAEb935E114dCd5ce20F20` |
+| Tournament          | `0x00522De31D348b7dBe2c0cB3609851176678E6d7` |
+| Treasury Vesting    | `0x150bFDb78820542d370ceD245A4e7a5F5C131281` |
 
-### Sepolia 
+### Arbitrum Sepolia Testnet
 
-| Contract name    | Address                                                    |
-|------------------|----------------------------------------------------------------|
-| Chess Fish Token | 0x36C4580CBBc723BA4df397bcC86d738f52b50E13                   |
-| Crowd Sale       | 0xbD3F3011b22dadB764BeF9E95279e0C8b5B58357                   |
-| Treasury Vesting | 0xeD01FEEdE03a11f09E205DD2df3e6F96Ac5F88De                   |
+| Contract name       | Address                                      |
+|---------------------|----------------------------------------------|
+| Deployer            | `0xC61bDCC3A088323D39Dbe364C10281982836506c` |
+| Chess Fish Token    | `0xc218A06a17FeB66B1a730889fB9624326Fabff4b` |
+| Dividend Splitter   | `0x973C170C3BC2E7E1B3867B3B29D57865efDDa59a` |
+| Chess NFT           | `0xbD1DFf018449AD4CBa7d3c0E982Cb9677b758f57` |
+| Move Verification   | `0x9ea6881ac1b5C4949E42Ae83D799622e2371A6c2` |
+| Gasless Game        | `0xeAbb5E5aF52Bf200c11F39e441B79746218Fe9d5` |
+| Chess Wager         | `0x3a228f23Df0e3c7E28FC6A39b463Cd7EED0CB25c` |
+| Crowd Sale          | `0xE2976A66E8CEF3932CDAEb935E114dCd5ce20F20` |
+| Tournament          | `0x00522De31D348b7dBe2c0cB3609851176678E6d7` |
+| Treasury Vesting    | `0x150bFDb78820542d370ceD245A4e7a5F5C131281` |
