--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,17 +10,17 @@ ______
 
 ChessFish is a web3 chess platform built on top of the Ethereum Virtual Machine, and is designed for players to engage in one-on-one games or tournaments with up to 25 participants. 
 
-ChessFish allows players to wager cryptocurrency on the outcomes of their games.
+ChessFish allows players to wager cryptocurrency on the outcomes of their games. Although designed to handle wagers, on ChessFish players can also play chess without betting crypto.
 
 > **On the ChessFish platform, users can:** 
 > * Create 1v1 chess matches
 > * Create tournaments with up to 25 players
 
-The protocol is built with immutable smart contracts, ensuring a decentralized and censorship-resistant chess platform.
+The protocol is built with immutable smart contracts, ensuring a decentralized and censorship-resistant chess platform. 
 
 ______
 
-Currently, ChessFish is in alpha (early access) and is currently under developement. 
+Currently, ChessFish is live on Abitrum.
 
 ______ 
 
