--- a/pages/purpose.mdx
+++ b/pages/purpose.mdx
@@ -1,21 +1,28 @@
-# Purpose
+# Purpose of ChessFish
 
-### *From the ChessFish Whitepaper:*
+### From the ChessFish Whitepaper:
 
-*“The purpose of ChessFish is to serve as a neutral intermediary between two or more parties wishing to play chess while betting cryptocurrency on the outcome.”*
+*“The purpose of ChessFish is to serve as a neutral intermediary between two or more parties wishing to play chess while betting cryptocurrency on the outcome.”*[^1]
 
-### What is the Purpose of Another Chess Platform? Aren't There Already Sites like Lichess.com and Chess.com?
+### ChessFish: An Innovative Chess Platform
 
-ChessFish stands apart. It's a platform where users can compete in chess for money, but in a completely trustless manner. 
+#### Why ChessFish When There Are Sites like Lichess.com and Chess.com?
 
-It's only at the highest levels that chess players get the opportunity to play for money in tournaments.
+ChessFish stands apart. It's a platform where users can compete in chess for money, but in a completely trustless manner.[^2] It's only at the highest levels that chess players get the opportunity to play for money in tournaments.
 
-Top chess organizations, such as FIDE, face issues tied to centralization, including the controversial [banning of players based on their nationality](https://www.rferl.org/a/russia-belarus-chess-ban/31756039.html).
+#### Problems of Traditional Chess Platforms and Chess Associations
 
-In the 1990s, Bobby Fischer was [indicted by the US Government for violating sanctions for participating in a chess tournament](https://www.washingtonpost.com/archive/politics/1992/12/16/chess-star-indicted-for-ignoring-sanctions/ac8a6d33-98db-4851-8395-5eb440f13f5b/) in Montenegro and Belgrade. 
+- **Withheld Payments**: Instances like grandmasters being [withheld payment of up to $20k USD](https://en.chessbase.com/post/never-ending-saga-of-moroccan-chess-part-ii) while participating in FIDE sanctioned tournaments highlight the issues of current tournaments.
+- **Centralization Issues**: Problems such as the controversial [banning of players based on their nationality](https://www.rferl.org/a/russia-belarus-chess-ban/31756039.html) by top chess organizations like FIDE and the [banning of certain national flags on Chess.com](https://www.chess.com/forum/view/general/chess-com-stop-the-ban-on-russias-flag).
+- **Political Interference**: Historical examples like Bobby Fischer being [indicted for participating in a tournament](https://www.washingtonpost.com/archive/politics/1992/12/16/chess-star-indicted-for-ignoring-sanctions/ac8a6d33-98db-4851-8395-5eb440f13f5b/) in violation of sanctions.
 
-Since when did chess transform into a political game? 
+#### ChessFish's Mission
 
-No country or chess organization should have the power to bar a player from entering a tournament for political, cultural, or racial reasons.
+- **Beyond Politics**: ChessFish aims to transcend chess from being a political game. It advocates for the right of every player to participate in tournaments without facing barriers for political, cultural, or racial reasons.
+- **Trustless Environment**: ChessFish is dedicated to empowering players to enjoy chess in a trustless environment, free from the complications of centralization.
 
-That's the raison d'être for ChessFish. ChessFish empowers players to enjoy chess in a trustless environment, free from the complications of centralization.
+____ 
+
+[^1]: [ChessFish Whitepaper](https://github.com/Chess-Fish/ChessFish-Whitepaper/blob/main/src/ChessFish%20Whitepaper%20DRAFT.pdf)
+
+[^2]: Players are not obligated to bet tokens for playing 1v1 games or participating in tournaments on ChessFish, provided the game's rules are set accordingly.
